# CPP_babel_2018

./: .gitignore  CMakeLists.txt  Socket.cpp  Socket.hpp  conanfile.txt  main.cpp  stdafx.h  test.cpp
client/include/: Client.hpp  PortAudio.hpp  UdpClient.hpp  VoIPManager.hpp
client/src/: Client.cpp  UdpClient.cpp  VoIPManager.cpp  main.cpp
connection/: client  exampleCondition.cpp  serv  serv.c  socket.c
include/: PortAudio.hpp  VoIPManager.hpp
server/: Server.cpp  Server.hpp  Session.cpp
src/: InputParams.cpp  OutputParams.cpp  PortAudio.cpp  PortData.cpp  VoIPManager.cpp  main.cpp  recordCallBack.cpp
